<resources>
    <string name="app_name">FotoJam</string>
    <string name="login_button_text">Log In</string>
    <string name="login_error_text">ACCOUNT_LOGIN_ERROR</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="create_jam_text">Create a new FotoJam</string>
    <string name="join_jam_text">Join an existing FotoJam</string>
    <string name="logout">Logout</string>
    <string name="view_profile">View Profile</string>
    <string name="jam_name_label">Jam Name</string>
    <string name="default_jam_name">New Jam</string>
    <string name="jam_description_label">Jam Description</string>
    <string name="default_jam_description">No description</string>
    <string name="create_jam_button_text">Create Jam</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_time_label">Jam Duration</string>
    <string name="jam_code_placeholder">Invite Code</string>
    <string name="join_existing_jam_label">Join an Existing Jam</string>
    <string name="join_existing_jam_button">Join</string>
    <string name="join_random_jam_label">-or-</string>
    <string name="join_random_jam_button">Join a Random Jam!</string>
    <string name="demo_jam_text">(Demo) Active Jam Activity</string>
    <string name="create_account">Create An Account</string>
    <string name="back">Back to Login Page</string>
    <string name="verify_password">Verify Password</string>
    <string name="take_photo">Take Photo</string>
    <string name="save">Save</string>
    <string name="photo_desc">Photo from camera</string>
    <string name="photo_saved">Photo saved.</string>
    <string name="photo_not_saved">Problem saving the photo.</string>
    <string name="demo_rating">(Demo) Picture Rating Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_screen">LoginScreen</string>
    <string name="home_screen">HomeScreen</string>
    <string name="create_account_text">Create Your Account</string>
    <string name="account_creation_error">ACCOUNT_CREATION_ERROR</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="create_account_title">Create a new Account</string>
    <string name="home_page_title_text">Welcome!</string>
    <string name="home_page_subtitle_text">Your currently joined FotoJams:</string>
    <string name="fotojam_name_placeholder">FotoJam Name</string>
    <string name="fotojam_description_placeholder">FotoJam Time Remaining</string>
    <string name="view_fotojam_text">Next Stage</string>
    <string name="ADMIN_TEXT">Because you created this jam, you can end submissions and start the rating stage whenever you want!</string>
    <string name="ADMIN_TEXT_RATING">Because you created this jam, you can end the voting stage and finalize the jam results whenever you want!</string>
    <string name="end_submission_button_text">Close Submissions</string>
    <string name="JAM_THEME_PLACEHOLDER">JAM_THEME_PLACEHOLDER</string>
    <string name="refresh_menu_text">Refresh</string>
</resources>